unpackaged/main/default/objects/litify_pm__Dice_Queue__c/litify_pm__Dice_Queue__c.object-meta.xml
<CustomObject>
    <label>DICE Queue</label>
    <nameField>
        <label>DICE Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DICE Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>