unpackaged/main/default/objects/litify_pm__Dice_Queue__c/fields/litify_pm__Latest_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Latest_Call_Time__c</fullName>
    <label>Latest Call Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12am</fullName>
            </value>
            <value>
                <fullName>1am</fullName>
            </value>
            <value>
                <fullName>2am</fullName>
            </value>
            <value>
                <fullName>3am</fullName>
            </value>
            <value>
                <fullName>4am</fullName>
            </value>
            <value>
                <fullName>5am</fullName>
            </value>
            <value>
                <fullName>6am</fullName>
            </value>
            <value>
                <fullName>7am</fullName>
            </value>
            <value>
                <fullName>8am</fullName>
            </value>
            <value>
                <fullName>9am</fullName>
            </value>
            <value>
                <fullName>10am</fullName>
            </value>
            <value>
                <fullName>11am</fullName>
            </value>
            <value>
                <fullName>12pm</fullName>
            </value>
            <value>
                <fullName>1pm</fullName>
            </value>
            <value>
                <fullName>2pm</fullName>
            </value>
            <value>
                <fullName>3pm</fullName>
            </value>
            <value>
                <fullName>4pm</fullName>
            </value>
            <value>
                <fullName>5pm</fullName>
            </value>
            <value>
                <fullName>6pm</fullName>
            </value>
            <value>
                <fullName>7pm</fullName>
            </value>
            <value>
                <fullName>8pm</fullName>
            </value>
            <value>
                <fullName>9pm</fullName>
            </value>
            <value>
                <fullName>10pm</fullName>
            </value>
            <value>
                <fullName>11pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>