unpackaged/main/default/objects/litify_pm__Dice_Queue__c/fields/litify_pm__Minutes_Between_Calls__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Minutes_Between_Calls__c</fullName>
    <label>Minutes Between Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>