unpackaged/main/default/objects/litify_pm__Dice_Queue__c/fields/litify_pm__Navigate_To_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Navigate_To_Object__c</fullName>
    <label>Navigate to Object</label>
    <length>200</length>
    <type>Text</type>
</CustomField>