unpackaged/main/default/objects/litify_pm__Dice_Queue__c/fields/litify_pm__Queries__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Queries__c</fullName>
    <label>Queries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>