unpackaged/main/default/objects/litify_pm__Dice_Queue__c/fields/litify_pm__Sorting__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Sorting__c</fullName>
    <label>Sorting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>